align github logo to button center, potentially fix overflowing error message

--- a/style.css
+++ b/style.css
@@ -62,7 +62,6 @@ body {
     border-radius: 16px;
     height: 90svh;
     aspect-ratio: 1/1.9;
-    overflow: hidden;
 }
 
 #screen {
@@ -145,6 +144,10 @@ body {
     transition: linear 0.2s;
 }
 
+button a {
+    display: flex;
+    justify-content: center;
+}
 footer {
     color: #769887;
 }
